--- a/index.html
+++ b/index.html
@@ -136,7 +136,28 @@
 					   <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETGOdwo7SUhAk3ERAmDMutwB_61-djyKkBASCYXoLaOowA?e=NTtQDz">PDF Download »</a></p>
             </blockquote>
           </div>
+		  <div class="col-12 mb-2 text-center">
+            <h2>Working Paper</h2>
+          </div>
 		  
+		   <div class="row">
+          <div class="col-sm-4 col-lg-4">
+            <h3> Monthly Fluctuations in International Energy Market</h3>
+            <p>  Based on ARCH model, analyze the monthly effects of US crude oil, gasoline, heating oil, natural gas futures and spot commodity prices. The conclusion shows significant March effects. </p>
+            <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/EdK_DIaMQ2RDomGKmbp_abwB648JW-PHGBw0KDWp4aw_Sw?e=oH2WJM">PDF Download »</a></p>
+          </div>
+          <div class="col-sm-4 col-lg-4">
+            <h3>Carbon Emissions in Four Functional Areas of Beijing</h3>
+            <p> Based on the IPCC measurement algorithm, calculate the carbon intensity of industrial energy in the four functional areas of Beijing, and decompose the impact of factors such as population size, urban employment level, industrial carbon emission intensity and industrialization level on carbon emission intensity. </p>
+            <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETRtcsUOtzRGh58SVt3C10ABXS7VCvkVrOulZAr52gPt4Q?e=yJjnvm">PDF Download »</a></p>
+          </div>
+			   <div class="col-sm-4 col-lg-4">
+            <h3> Real Estate Investment, Industrial Structure and Inflation</h3>
+            <p>The PVAR model is used to empirically analyze the interaction between real estate investment, industrial structure and inflation in the four municipalities in 2005-2017.
+	As a result, the optimization of industrial structure has an inhibitory effect on the rise of inflation rate </p>
+            <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ESB3EhcYh9pMrV4S9vPpNU8BGaScYuUcpgLccEGezE4BaQ?e=bfigLX">PDF Download »</a></p>
+          </div>
+	    </div>
                  
             </blockquote>
           </div>
