--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
           </div>
 		          <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3>Carbon Emissions in Beijing-Tianjin-Hebei.</h3>
-				<p> On the basis of the calculation of carbon emissions in Beijing-Tianjin-Hebei, the spatial and temporal evolution analysis is used to evaluate the path of emission reduction policy. </p>
+              <h3>Improvement of University Student Canteen Management</h3>
+				<p> Investigated the management of the universities canteens, analyzed how to layout of high-floors can improve the overall efficiency, and solved the problems in canteen management. </p>
               <small class="blockquote-footer">National University Students Science and Technology Innovation Project </cite></small> 
+					  <small class="blockquote-footer">Award: The 1st Price on College Students’ Innovation and Entrepreneurship Training Plan 
 					   <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETGOdwo7SUhAk3ERAmDMutwB_61-djyKkBASCYXoLaOowA?e=NTtQDz">PDF Download »</a></p>
             </blockquote>
           </div>
