--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chunyu MENG</title>
+    <title>Chunyu MENG (孟椿雨) </title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.2.1.css" rel="stylesheet">
     <style type="text/css">
@@ -175,7 +175,7 @@
           <div class="jumbotron">
             <div class="row text-center">
               <div class="text-center col-12">
-                <h2>Connect with me</h2>
+                <h2>Contact with me</h2>
               </div>
               <div class="text-center col-12">
                 <!-- CONTACT FORM https://github.com/jonmbake/bootstrap3-contact-form -->
