--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETRtcsUOtzRGh58SVt3C10ABXS7VCvkVrOulZAr52gPt4Q?e=yJjnvm">PDF Download »</a></p>
           </div>
 			   <div class="col-sm-4 col-lg-4">
-            <h3> Real Estate Investment, Industrial Structure and Inflation</h3>
+            <h3> Estate Investment, Industrial Structure and Inflation</h3>
             <p>The PVAR model is used to empirically analyze the interaction between real estate investment, industrial structure and inflation in the four municipalities in 2005-2017.
 	As a result, the optimization of industrial structure has an inhibitory effect on the rise of inflation rate </p>
             <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ESB3EhcYh9pMrV4S9vPpNU8BGaScYuUcpgLccEGezE4BaQ?e=bfigLX">PDF Download »</a></p>
