--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="col-8">&nbsp;
 				 <h1 class="text-center">Chunyu MENG （孟椿雨）</h1>
 				<p class="text-center">
-			  <p class="text-center">  Undergraduate Student in China University of Petroleum-Beijing (CUPB).	</p>
+			  <p class="text-center">  China University of Petroleum-Beijing (CUPB).	</p>
+				<p class="text-center">Outstanding Graduates in B.Econ</p>
 				<p class="text-center">   Majoy : Energy Economy • Minor : Computer Science	</p>
 				
 				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/EegqRHhCw3BIuxQ-lYb1JGIBkmlzDCKbKJw2byauSwRKNw?e=ZqWUwK" role="button">CV Download</a> </p>
@@ -119,8 +120,9 @@
             <blockquote class="blockquote">
               <h3>Cost-benefit of Green Credit in Banks</h3>
 				<p> From the case of 21 major banks in China, the project establishes a cost-benefit model of commercial banks’ green credit environment performance in the perspective of banks and society. </p>
-              <small class="blockquote-footer">National University Students Science and Technology Innovation Project </cite></small> 
-				<small class="blockquote-footer">Award: The 2nd Price on College Students’ Innovation and Entrepreneurship Training Plan </cite></small> 
+              <small class="blockquote-footer">National University Students Science and Technology Innovation Project. </cite></small> 
+				<small class="blockquote-footer">Award: The 2nd Price on College Students’ Innovation and Entrepreneurship Training Plan. </cite></small> 
+		  <small class="blockquote-footer">Paper Publication: Chinese Journal of Environmental Management, Forthcoming. </cite></small> 
 		   <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETxBs4EGLmdLhgWhUSv9UckBSa4mi2lIdJgZYGGDx_AiCg?e=0aoaF9">PDF Download »</a></p>
 			</blockquote>
           </div>
@@ -184,7 +186,7 @@
                   <div class="form-group">
                     <label for="email">E-Mail</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" aria-describedby="emailHelp">
-                    <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span>
+                    <span id="emailHelp" class="form-text text-muted" style="display: none;">m.chun@outlook.com</span>
                   </div>
                   <div class="form-group">
                     <label for="message">Message</label>
@@ -203,7 +205,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Chunyu-Meng. All rights reserved.</p>
+            <p>Copyright © Chunyu-Meng 2020. All rights reserved.</p>
           </div>
         </div>
       </div>
