--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-12 mt-2 text-center">
-            <h2>ON-GOING RESEARCHES OF GRADUATION THESIS</h2>
+            <h2>RESEARCHES OF GRADUATION THESIS</h2>
           </div>
         </div>
       </div>
@@ -89,15 +89,21 @@
           </div>
 		  
 		   <div class="row">
-          <div class="col-sm-6 col-lg-6">
-            <h3>Gasoline and Shared bikes</h3>
+			<div class="col-sm-4 col-lg-4">
+            <h3> Research on Cost-Benefit Evaluation of Green Credit in China </h3>
+            <p> Identify and quantify the cost and environmental benefits of green credit implementation of China's commercial banks, and provide a scientific analysis method for the externality of green credit environment. </p>
+            <p><a class="btn btn-link" href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDAUTO&filename=ZHGL202005017&v=UsOO9JleUvbpI4\%25mmd2Few9BgqridNaEYlBXzPz70AVq9zz0xtwc2gHBIvbCGJkVgsZ9A">PDF Download »</a></p>
+          </div>
+          <div class="col-sm-4 col-lg-4">
+            <h3>Gasoline Consumption Reduction is Worth Exploring</h3>
             <p> Analysis why apparent consumption of gasoline is decline, base on the growth in car ownership. The result shows the impact from shared bicycles on consumption is only 1.02%. The real cause is refining of stocks </p>
             <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:f:/g/personal/2016011741_student_cup_edu_cn/Ei6d5E6yuHlGlSpe6mjGx90BcHbhJVF6oPnM53oF5joMDw?e=NaW1V6">PDF Download »</a></p>
           </div>
-          <div class="col-sm-6 col-lg-6">
-            <h3>Economics of Climate Change</h3>
-            <p> Summarize the development history of climate change and the status quo of international cooperation. Define the concept of uncertainty in climate change economics, case studies, and propose reasonable response. </p>
-            <p><a class="btn btn-link" href="http://www.adobe.com">Forthcoming »</a></p>
+
+          <div class="col-sm-4 col-lg-4">
+            <h3>Regional Natural Gas Pricing Center from the Industry Chain Perspective </h3>
+            <p> Study the regional natural gas pricing center, and translate the article "Gas and LNG trading hubs, hub indexation and destination flexibility in East Asia" by authorization </p>
+            <p><a class="btn btn-link" href="http://store.yooso.com.cn/goods.php?id=43842">Monograph Subscription »</a></p>
           </div>
 	    </div>
 		  
@@ -122,8 +128,8 @@
 				<p> From the case of 21 major banks in China, the project establishes a cost-benefit model of commercial banks’ green credit environment performance in the perspective of banks and society. </p>
               <small class="blockquote-footer">National University Students Science and Technology Innovation Project. </cite></small> 
 				<small class="blockquote-footer">Award: The 2nd Price on College Students’ Innovation and Entrepreneurship Training Plan. </cite></small> 
-		  <small class="blockquote-footer">Paper Publication: Chinese Journal of Environmental Management, Forthcoming. </cite></small> 
-		   <p><a class="btn btn-link" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETxBs4EGLmdLhgWhUSv9UckBSa4mi2lIdJgZYGGDx_AiCg?e=0aoaF9">PDF Download »</a></p>
+		  <small class="blockquote-footer">Paper Publication: Chinese Journal of Environmental Management. </cite></small> 
+		   <p><a class="btn btn-link" href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDAUTO&filename=ZHGL202005017&v=UsOO9JleUvbpI4\%25mmd2Few9BgqridNaEYlBXzPz70AVq9zz0xtwc2gHBIvbCGJkVgsZ9A">PDF Download »</a></p>
 			</blockquote>
           </div>
 		<div class="col-sm-12 col-lg-12">
