--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-8">&nbsp;
 				 <h1 class="text-center">Chunyu MENG （孟椿雨）</h1>
 				<p class="text-center">
-				<p class="text-center">  Research Assitant in The Chinese University of Hong Kong, Shenzhen.	</p>
+				<p class="text-center">  Research Associate in The Chinese University of Hong Kong, Shenzhen.	</p>
 			   <p class="text-center">  B.S. in Energy Economy & Computer Science</p>
 				<p class="text-center">  China University of Petroleum-Beijing (Outstanding Graduates)</p>
 				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/EegqRHhCw3BIuxQ-lYb1JGIBkmlzDCKbKJw2byauSwRKNw?e=ZqWUwK" role="button">CV Download</a> </p>
