--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<p class="text-center">  Research Associate at The Chinese University of Hong Kong, Shenzhen.	</p>
 			   <p class="text-center">  B.S. in Energy Economy & Computer Science</p>
 				<p class="text-center">  China University of Petroleum-Beijing (Outstanding Graduates)</p>
-			  <p class="text-center"><a class="btn btn-primary btn-lg" href="Meng Chunyu - CV.pdf" role="button">CV Download</a>
+			  <p class="text-center"><a class="btn btn-primary btn-lg" href="ChunyuMENG-CV.pdf" role="button">CV Download</a>
 			</p>
 			  </div>			  
 			  
