--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     color: #007BFF;
 }
     a:visited {
-    color: #FFFFFF;
+    color: #007BFF;
 }
     a:active {
-    color: #000000;
+    color: #007BFF;
 }
     a {
     font-weight: bold;
@@ -97,37 +97,36 @@
             <h3>Computer Science</h3>
             <p>Measuring Business Prosperity using Street-Level Imagery of Machine Learning</p>
           </div>
-			<p> <br /> </p>
         </div>
 		  <div class="col-12 mb-2 text-center">
+			 <p> <br /> </p>
             <h2>PUBLICATIONS</h2>
           </div>
 		          <div class="row">
           <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://doi.org/10.16493/j.cnki.42-1627/c.2021.02.008" target="_blank" > 
-				  Study on the spatiotemporal evolution of carbon emissions and the Regional heterogeneity influences of the four functional areas under the Beijing noncapital functions relocation policy</a></h3>
+              <h3><a href="http://doi.org/10.16493/j.cnki.42-1627/c.2021.02.008" target="_blank" style="color:black"> Study on the spatiotemporal evolution of carbon emissions and the Regional heterogeneity influences of the four functional areas under the Beijing noncapital functions relocation policy</a></h3>
 				<p> Based on the IPCC measurement algorithm, calculate the carbon intensity of industrial energy in the four functional areas of Beijing, and decompose the impact of factors such as population size, urban employment level, industrial carbon emission intensity and industrialization level on carbon emission intensity. </p>
 		    </blockquote>
           </div>	
 					  
 			<div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" > Research on Cost-Benefit Evaluation of Green Credit in China</a></h3>
+              <h3><a href="http://doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" style="color:black"> Research on Cost-Benefit Evaluation of Green Credit in China</a></h3>
 				<p> Identify and quantify the cost and environmental benefits of green credit implementation of China’s commercial banks, and provide a scientific analysis method for the externality of green credit environment. </p>
 			 </blockquote>
          	 </div>		  
 	  
 			<div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="20170831-中国石油报-共享单车对汽油消费量影响.pdf" target="_blank" > The Phenomenon of Gasoline Consumption Reduction is Worth Exploring</a></h3>
+              <h3><a href="20170831-中国石油报-共享单车对汽油消费量影响.pdf" target="_blank" style="color:black"> The Phenomenon of Gasoline Consumption Reduction is Worth Exploring</a></h3>
 				<p> Identify and quantify the cost and environmental benefits of green credit implementation of China’s commercial banks, and provide a scientific analysis method for the externality of green credit environment. </p>
 		  	  </blockquote>
           </div>	
 					  
 			<div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://store.yooso.com.cn/goods.php?id=43842" target="_blank" > Regional Natural Gas Pricing Center from the Industry Chain Perspective </a></h3>
+              <h3><a href="http://store.yooso.com.cn/goods.php?id=43842" target="_blank" style="color:black"> Regional Natural Gas Pricing Center from the Industry Chain Perspective </a></h3>
             <p> CHAPTER 1: The Development of the International Natural Gas Industry Chain and Analysis of Regional Pricing Center. 
 				CHAPTER 5, SECTION 6: Scenario Simulation of Asia-acific’s Natural Gas Regional Pricing Center.<br />
 				Translate the article "Gas and LNG trading hubs, hub indexation and destination flexibility in East Asia" by authorization. </p>
@@ -145,14 +144,14 @@
         <div class="row">
           <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="https://studentcupeducn-my.sharepoint.com/:f:/g/personal/2016011741_student_cup_edu_cn/Ei6d5E6yuHlGlSpe6mjGx90BcHbhJVF6oPnM53oF5joMDw?e=NaW1V6" target="_blank" >Carbon Emissions in Beijing-Tianjin-Hebei</a></h3>
+              <h3><a href="https://studentcupeducn-my.sharepoint.com/:f:/g/personal/2016011741_student_cup_edu_cn/Ei6d5E6yuHlGlSpe6mjGx90BcHbhJVF6oPnM53oF5joMDw?e=NaW1V6" target="_blank" style="color:black">Carbon Emissions in Beijing-Tianjin-Hebei</a></h3>
 				<p> On the basis of the calculation of carbon emissions in Beijing-Tianjin-Hebei, the spatial and temporal evolution analysis is used to evaluate the path of emission reduction policy. </p>
               <small class="blockquote-footer">National University Students Science and Technology Innovation Project </cite></small> 
             </blockquote>
           </div>
 		   <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" > Research on Cost-Benefit Evaluation of Green Credit in China Banks</a></h3>
+              <h3><a href="http://doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" style="color:black"> Research on Cost-Benefit Evaluation of Green Credit in China Banks</a></h3>
 				<p> From the case of 21 major banks in China, the project establishes a cost-benefit model of commercial banks’ green credit environment performance in the perspective of banks and society. </p>
             	 <small class="blockquote-footer">National University Students Science and Technology Innovation Project. </cite></small> 
 				<small class="blockquote-footer">Award: The 2nd Price on College Students’ Innovation and Entrepreneurship Training Plan. </cite></small> 
@@ -161,10 +160,11 @@
           </div>
 		<div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETGOdwo7SUhAk3ERAmDMutwB_61-djyKkBASCYXoLaOowA?e=NTtQDz" target="_blank" >Improvement of University Student Canteen Management</a></h3>
+              <h3><a href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/ETGOdwo7SUhAk3ERAmDMutwB_61-djyKkBASCYXoLaOowA?e=NTtQDz" target="_blank" style="color:black">Improvement of University Student Canteen Management</a></h3>
 				<p> Investigated the management of the universities canteens, analyzed how to layout of high-floors can improve the overall efficiency, and solved the problems in canteen management. </p>
            	    <small class="blockquote-footer">National University Students Science and Technology Innovation Project </cite></small> 
-				<small class="blockquote-footer">Award: The 1st Price on College Students’ Innovation and Entrepreneurship Training Plan </cite></small> 
+				<small class="blockquote-footer">Award: The 1st Price on College Students’ Innovation and Entrepreneurship Training Plan </cite></small>
+	 			 <p> <br /> </p>
 			</blockquote>
           </div>
         </div>
@@ -176,7 +176,7 @@
         <div class="row">
 		  <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/EdK_DIaMQ2RDomGKmbp_abwB648JW-PHGBw0KDWp4aw_Sw?e=oH2WJM" target="_blank">Monthly Fluctuations in International Energy Market</a></h3>
+              <h3><a href="https://studentcupeducn-my.sharepoint.com/:b:/g/personal/2016011741_student_cup_edu_cn/EdK_DIaMQ2RDomGKmbp_abwB648JW-PHGBw0KDWp4aw_Sw?e=oH2WJM" target="_blank" style="color:black">Monthly Fluctuations in International Energy Market</a></h3>
 				<p> Based on ARCH model, analyze the monthly effects of US crude oil, gasoline, heating oil, natural gas futures and spot commodity prices. The conclusion shows significant March effects. </p>
 				 <p> <br /> </p>
 			</blockquote>
