--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 		          <div class="row">
           <div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://doi.org/10.16493/j.cnki.42-1627/c.2021.02.008" target="_blank" style="color:black"> Study on the spatiotemporal evolution of carbon emissions and the Regional heterogeneity influences of the four functional areas under the Beijing noncapital functions relocation policy</a></h3>
+              <h3><a href="http://dx.doi.org/10.16493/j.cnki.42-1627/c.2021.02.008" target="_blank" style="color:black"> Study on the spatiotemporal evolution of carbon emissions and the Regional heterogeneity influences of the four functional areas under the Beijing noncapital functions relocation policy</a></h3>
 				<p> Based on the IPCC measurement algorithm, calculate the carbon intensity of industrial energy in the four functional areas of Beijing, and decompose the impact of factors such as population size, urban employment level, industrial carbon emission intensity and industrialization level on carbon emission intensity. </p>
 		    </blockquote>
           </div>	
 					  
 			<div class="col-sm-12 col-lg-12">
             <blockquote class="blockquote">
-              <h3><a href="http://doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" style="color:black"> Research on Cost-Benefit Evaluation of Green Credit in China</a></h3>
+              <h3><a href="http://dx.doi.org/10.16868/j.cnki.1674-6252.2020.05.115" target="_blank" style="color:black"> Research on Cost-Benefit Evaluation of Green Credit in China</a></h3>
 				<p> Identify and quantify the cost and environmental benefits of green credit implementation of China’s commercial banks, and provide a scientific analysis method for the externality of green credit environment. </p>
 			 </blockquote>
          	 </div>		  
